--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.4.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
+    "classnames": "^2.5.1",
     "http-proxy-middleware": "^2.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -20,6 +21,8 @@
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
+    "@toast-ui/editor": "^3.2.2",
+    "@toast-ui/react-editor": "^3.2.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
