--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
+    "@ant-design/compatible": "^5.1.3",
     "@toast-ui/editor": "^3.2.2",
     "@toast-ui/react-editor": "^3.2.3",
     "@types/react": "^18.3.3",
